# airbnb-clone-backend

./: pyproject.toml
bookings/: models.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
categories/: models.py  views.py
categories/migrations/: 0001_initial.py
config/: settings.py  urls.py
direct_messages/: models.py
direct_messages/migrations/: 0001_initial.py  0002_alter_message_room_alter_message_user.py
experiences/: admin.py  models.py  views.py
experiences/migrations/: 0001_initial.py  0002_experience_category_alter_perk_detail_and_more.py  0003_alter_experience_category_alter_experience_host.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_rename_price_house_price_per_night.py  0003_house_pets_allowed.py
medias/: models.py  views.py
medias/migrations/: 0001_initial.py  0002_photo_description.py  0003_alter_photo_experience_alter_photo_room.py  0004_alter_photo_file_alter_video_file.py
reviews/: admin.py  models.py  serializers.py
reviews/migrations/: 0001_initial.py  0002_alter_review_experience_alter_review_room.py
rooms/: admin.py  models.py  serializers.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_initial.py  0003_room_name.py  0004_alter_amenity_options.py  0005_room_category.py  0006_alter_room_amenities_alter_room_category_and_more.py
users/: admin.py  models.py
users/migrations/: 0001_initial.py  0002_user_is_host_user_name_alter_user_first_name_and_more.py
wishlists/: models.py  serializers.py  views.py
(+1 files in other folders)
